add rsync to base

--- a/base.yaml
+++ b/base.yaml
@@ -101,6 +101,7 @@ packages:
   - pciutils
   - containernetworking-plugins
   - systemd-networkd
+  - rsync
   - wireless-regdb
 
 packages-x86_64:
