--- a/client.yaml
+++ b/client.yaml
@@ -11,6 +11,7 @@ default_target: graphical.target
 repos:
   - rpmfusion-free
   - rpmfusion-free-updates
+  - fedora-rawhide-nodebug-kernel
 
 remove-from-packages:
   - [podman, /etc/cni/net.d/.*]
