--- a/nvidia-gpu.yaml
+++ b/nvidia-gpu.yaml
@@ -1,8 +1,10 @@
 repos:
   - rpmfusion-free
   - rpmfusion-free-updates
+  - rpmfusion-free-updates-testing
   - rpmfusion-nonfree
   - rpmfusion-nonfree-updates
+  - rpmfusion-nonfree-updates-testing
   - libnvidia-container
   - nvidia-container-runtime
 
