--- a/client.yaml
+++ b/client.yaml
@@ -9,8 +9,11 @@ rojig:
 default_target: graphical.target
 
 repos:
+  - fedora-updates-testing
+  - fedora-updates-testing-modular
   - rpmfusion-free
   - rpmfusion-free-updates
+  - rpmfusion-free-updates-testing
 
 remove-from-packages:
   - [podman, /etc/cni/net.d/.*]
