--- a/client.yaml
+++ b/client.yaml
@@ -356,6 +356,7 @@ packages:
   - nmap
   - podman-compose
   - mesa-va-drivers-freeworld
+  - rocm-opencl
   - cri-o cri-tools conntrack-tools kubelet
   - iscsi-initiator-utils
 
