--- a/client.yaml
+++ b/client.yaml
@@ -195,7 +195,7 @@ packages:
   - nss-mdns
   # - ntfs-3g
   # - ntfsprogs
-  - nvidia-gpu-firmware
+  # - nvidia-gpu-firmware
   - opensc
   - openssh-clients
   - openssh-server
