--- a/client.yaml
+++ b/client.yaml
@@ -14,7 +14,7 @@ repos:
   - rpmfusion-free
   - rpmfusion-free-updates
   # - rpmfusion-free-updates-testing
-  # - fedora-updates-testing-kernel
+  - fedora-updates-testing-kernel
 
 remove-from-packages:
   - [podman, /etc/cni/net.d/.*]
