--- a/base.yaml
+++ b/base.yaml
@@ -18,7 +18,6 @@ repos:
   - fedora-updates
   - fedora-modular
   - fedora-updates-modular
-  - kubernetes
 
 # Be minimal
 recommends: false
@@ -87,7 +86,7 @@ packages:
   - kbd
   - zram-generator
   - systemd-resolved
-  - amd-gpu-firmware intel-gpu-firmware nvidia-gpu-firmware
+  - amd-gpu-firmware intel-gpu-firmware
 
   # networking-tools
   - iproute-tc
@@ -100,15 +99,13 @@ packages:
   - ssh-key-dir
   - ldns-utils
   - pciutils
-  - containernetworking-plugins
-  - cri-o cri-tools conntrack-tools kubelet-1.26.4
-  - iscsi-initiator-utils
   - rsync
   - wireless-regdb
 
 packages-x86_64:
   - irqbalance
   - thermald
+  - microcode_ctl
 packages-aarch64:
   - irqbalance
 exclude-packages:
