--- a/manifest-silverblue.yaml
+++ b/manifest-silverblue.yaml
@@ -22,6 +22,8 @@ remove-from-packages:
   - [podman, /etc/cni/net.d/.*]
 
 packages:
+  - fedora-release-silverblue
+
   ## from fedora-common-ostree.yaml
   # Do not include "full" Git as it brings in Perl
   - git-core
@@ -360,7 +362,6 @@ packages:
   # - yelp
 
   # custom
-  - fedora-release-silverblue
   - slirp4netns podman-plugins netavark aardvark-dns
   - libva-utils vulkan vulkan-tools
   - tmux xclip
@@ -372,7 +373,11 @@ packages:
 
   # custom hardware
   - iw
+  - wireless-regdb
   - opentabletdriver
   - dymo-cups-drivers
   # https://www.reddit.com/r/Fedora/comments/ocn6ko/usb_tethering_with_ios_146_on_fedora/
   - libimobiledevice-utils usbmuxd
+
+exclude-packages:
+  - grubby
