--- a/kubernetes.yaml
+++ b/kubernetes.yaml
@@ -4,11 +4,9 @@ repos:
 remove-from-packages:
   - [cri-o, /etc/cni/net.d/.*]
   - [conntrack-tools, /etc/conntrackd/conntrackd.conf]
-  - [keepalived, /etc/keepalived/keepalived.conf]
-  - [haproxy, /etc/haproxy/haproxy.cfg]
 
 packages:
   - containernetworking-plugins
-  - cri-o cri-tools conntrack-tools kubelet-1.26.4
-  - keepalived
-  - haproxy
+  - cri-o cri-tools kubelet-1.26.4
+  - conntrack-tools
+  - iscsi-initiator-utils
