--- a/manifest-silverblue.yaml
+++ b/manifest-silverblue.yaml
@@ -212,7 +212,7 @@ packages:
   - nss-mdns
   # - ntfs-3g
   # - ntfsprogs
-  - nvidia-gpu-firmware
+  # - nvidia-gpu-firmware
   - opensc
   - openssh-clients
   - openssh-server
