--- a/manifest-silverblue.yaml
+++ b/manifest-silverblue.yaml
@@ -2,6 +2,7 @@ include:
   - base.yaml
   - vrrp.yaml
   - kubernetes.yaml
+  - amd-gpu.yaml
   # - nvidia-gpu.yaml
 
 rojig:
@@ -215,7 +216,7 @@ packages:
   - nss-mdns
   # - ntfs-3g
   # - ntfsprogs
-  # - nvidia-gpu-firmware
+  - nvidia-gpu-firmware
   - opensc
   - openssh-clients
   - openssh-server
@@ -366,9 +367,10 @@ packages:
   # - yelp
 
   # custom
-  - mesa-va-drivers-freeworld
+  - mesa-va-drivers-freeworld mesa-vdpau-drivers-freeworld
   - slirp4netns podman-plugins netavark aardvark-dns podman-compose
   - libva-utils vulkan vulkan-tools
+  - libva-vdpau-driver vdpauinfo
   - tmux xclip
   - kubectl helm
   - nmap
