--- a/manifest-silverblue.yaml
+++ b/manifest-silverblue.yaml
@@ -376,7 +376,7 @@ packages:
   - tmux xclip
   - kubectl helm
   - nmap
-  - sunshine
+  # - sunshine
   # - tailscale
   # - libvirt-daemon-kvm libvirt-client virt-viewer
 
