--- a/image-silverblue.yaml
+++ b/image-silverblue.yaml
@@ -6,6 +6,9 @@ extra-kargs:
   - iommu=pt
   - rd.driver.pre=vfio-pci
   - enforcing=0
+  - rd.driver.blacklist=nouveau
+  - modprobe.blacklist=nouveau
+  - nvidia_drm.modeset=1
 
 ignition-network-kcmdline: []
 ostree-remote: fedora
