add kmods overlay

--- a/manifest-silverblue.yaml
+++ b/manifest-silverblue.yaml
@@ -3,7 +3,10 @@ include:
   - vrrp.yaml
   - kubernetes.yaml
   # - nvidia-gpu.yaml
-  - amd-gpu.yaml
+  # - amd-gpu.yaml
+
+ostree-layers:
+  - overlay/02kmod
 
 rojig:
   license: MIT
