--- a/amd-gpu.yaml
+++ b/amd-gpu.yaml
@@ -2,6 +2,6 @@ repos:
   - ROCm
 
 packages:
-  - amdgpu-core
-  - rocm-hip-runtime
-  - rocm-hip-runtime-devel
+  - amdgpu-dkms
+  - rocm-hip
+  - rocm-hip-devel
