--- a/manifest-silverblue.yaml
+++ b/manifest-silverblue.yaml
@@ -18,7 +18,7 @@ repos:
   - rpmfusion-free-updates
   - custom
   - nvidia
-  # - tailscale-stable
+  - tailscale-stable
 
 remove-from-packages:
   - [podman, /etc/cni/net.d/.*]
@@ -374,7 +374,7 @@ packages:
   - nmap
   - sunshine
   - nvidia-container-runtime
-  # - tailscale
+  - tailscale
   # - libvirt-daemon-kvm libvirt-client virt-viewer
 
   # custom hardware
