--- a/manifest-silverblue.yaml
+++ b/manifest-silverblue.yaml
@@ -19,14 +19,13 @@ repos:
   - rpmfusion-nonfree
   - rpmfusion-nonfree-updates
   - custom
-  - nvidia
   - tailscale-stable
+  # - nvidia
 
 remove-from-packages:
   - [podman, /etc/cni/net.d/.*]
-  # replace these with patched files
-  - [nvidia-driver-cuda-libs, /usr/lib64/libnvidia-encode.*]
-  - [nvidia-driver-NvFBCOpenGL, /usr/lib64/libnvidia-fbc.*]
+  # - [nvidia-driver-cuda-libs, /usr/lib64/libnvidia-encode.*]
+  # - [nvidia-driver-NvFBCOpenGL, /usr/lib64/libnvidia-fbc.*]
 
 packages:
   - fedora-release-silverblue
@@ -381,13 +380,15 @@ packages:
   - tailscale
   # - libvirt-daemon-kvm libvirt-client virt-viewer
 
-  # nvidia
-  - nvidia-driver-libs
-  - nvidia-driver-cuda-libs
-  - nvidia-driver-NvFBCOpenGL
+  # nvidia and xorg
+  # - nvidia-driver-libs
+  # - nvidia-driver-cuda-libs
+  # - nvidia-driver-NvFBCOpenGL
   - nvidia-vaapi-driver
   - nvidia-container-runtime
   - gnome-session-xsession
+  - xorg-x11-drv-amdgpu
+  - xorg-x11-drv-intel
 
   # custom hardware
   - wireless-regdb iw
