--- a/desktop.yaml
+++ b/desktop.yaml
@@ -358,6 +358,7 @@ packages:
   - kubectl helm
   - nmap
   - sunshine
+  - tailscale
   - iw
   # - libvirt-daemon-kvm libvirt-client virt-viewer
 
