--- a/kubernetes.yaml
+++ b/kubernetes.yaml
@@ -9,3 +9,7 @@ packages:
   - containernetworking-plugins
   - cri-o cri-tools kubelet-1.26.4
   - conntrack-tools
+
+exclude-packages:
+  - NetworkManager-initscripts-ifcfg-rh
+  - NetworkManager
